--- a/css/styles.css
+++ b/css/styles.css
@@ -357,11 +357,6 @@ img {
 .social-list-link:focus {
   background-color: #404bbf;
 }
-   
-.social-list-link:hover,
-.social-list-link:focus {
-  background-color: #31d0aa;
-}
 
 .our-team {
   margin-bottom: 72px;
@@ -406,8 +401,7 @@ img {
 }
 
 .or-team-card-content {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 0 32px;
 }
 
 .our-team-text {
@@ -486,6 +480,11 @@ img {
   height: 312px;
   background-color: #2e2f42
 }
+
+.footer-logo-container {
+  margin-right: 120px;
+}
+
 .footer-section .logo-link {
   margin-right: 0;
   margin-bottom: 16px;
