--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,6 @@ img {
 
 .header-section {
   border-bottom: 1px solid #e7e9fc;
-  padding-top: 24px;
-  padding-bottom: 24px;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
@@ -145,18 +143,17 @@ img {
 /* Hero section */
 
 .hero-section {
-  margin: 0 auto;
-  text-align: center;
+  max-width: 1440px;
+  margin-right: auto;
+  margin-left: auto;
   padding-top: 188px;
   padding-bottom: 188px;
+  text-align: center;
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/hero/people-office.jpg);
-  background-size: contain;
-  background-color: #2e2f42;
   background-size: cover;
-  max-width: 1440px;
-  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
   background-position: center;
-  
+  background-color: #2e2f42;
 }
 
 .main-title {
@@ -278,15 +275,6 @@ img {
 .punctuality-icon-list {
   width: 61.22px;
   height: 64px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.diligence-icon-list {
-  width: 64px;
-  height: 49.09px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -471,7 +459,6 @@ img {
 .footer-container {
   display: flex;
   align-items: baseline;
-  gap: 120px;
 }
 
 .footer-section {
@@ -525,8 +512,6 @@ img {
 .social-footer-list-item {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
-  background-color: #4D5AE5;
 }
 
 .social-footer-list-link {
