--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,7 @@ img {
   padding-top: 188px;
   padding-bottom: 188px;
   text-align: center;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/hero/people-office.jpg);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/people-office.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
